JWT starting to work
